update Role and added enum instead of String